@@ -479,6 +479,8 @@ L<Paws::Glue>
 
 L<Paws::Greengrass>
 
+L<Paws::GroundStation>
+
 L<Paws::GuardDuty>
 
 L<Paws::Health>
@@ -499,7 +501,13 @@ L<Paws::IoTAnalytics>
 
 L<Paws::IoTData>
 
+L<Paws::IoTEvents>
+
+L<Paws::IoTEventsData>
+
 L<Paws::IoTJobsData>
+
+L<Paws::IoTThingsGraph>
 
 L<Paws::Kafka>
 
@@ -547,6 +555,8 @@ L<Paws::MediaLive>
 
 L<Paws::MediaPackage>
 
+L<Paws::MediaPackageVod>
+
 L<Paws::MediaStore>
 
 L<Paws::MediaStoreData>
@@ -570,6 +580,12 @@ L<Paws::OpsWorksCM>
 L<Paws::Organizations>
 
 L<Paws::PerformanceInsights>
+
+L<Paws::Personalize>
+
+L<Paws::PersonalizeEvents>
+
+L<Paws::PersonalizeRuntime>
 
 L<Paws::Pinpoint>
 
