@@ -84,6 +84,7 @@ package Paws::API::ServiceToClass;
     globalaccelerator => 'GlobalAccelerator',
     glue => 'Glue',
     greengrass => 'Greengrass',
+    groundstation => 'GroundStation',
     guardduty => 'GuardDuty',
     health => 'Health',
     iam => 'IAM',
@@ -93,6 +94,9 @@ package Paws::API::ServiceToClass;
    'iot-data' => 'IoTData',
    'iot1click-devices' => 'IoT1ClickDevices',
    'iot1click-projects' => 'IoT1ClickProjects',
+    iotevents => 'IoTEvents',
+   'iotevents-data' => 'IoTEventsData',
+   'iotthingsgraph' => 'IoTThingsGraph',
     inspector => 'Inspector',
     importexport => 'ImportExport',
     kafka => 'Kafka',
@@ -118,6 +122,7 @@ package Paws::API::ServiceToClass;
     mediaconvert => 'MediaConvert',
     medialive => 'MediaLive',
     mediapackage => 'MediaPackage',
+   'mediapackage-vod' => 'MediaPackageVod',
     mediastore => 'MediaStore',
    'mediastore-data' => 'MediaStoreData',
     mediatailor => 'MediaTailor',
@@ -131,6 +136,9 @@ package Paws::API::ServiceToClass;
     opsworks => 'OpsWorks',
     opsworkscm => 'OpsWorksCM',
     organizations => 'Organizations',
+    personalize => 'Personalize',
+   'personalize-events' => 'PersonalizeEvents',
+   'personalize-runtime' => 'PersonalizeRuntime',
     pi => 'PerformanceInsights',
     pinpoint => 'Pinpoint',
    'pinpoint-email' => 'PinpointEmail',
